Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140675

svgtoqml commandline tool breaks compilation over ssh

XMLWordPrintable

    • Linux/Wayland
    • 00f7af4e5 (dev), 6afae55ce (dev)
    • 2D Vector Graphics 42 2025

      The solution from QTBUG-139976 / https://codereview.qt-project.org/c/qt/qtdeclarative/+/674798 doesn't seem to have been enough. I am compiling on an Ubuntu machine over SSH and still get this several times during compilation:

      FAILED: qtdeclarative/examples/quick/quickshapes/weatherforecast/.qt/svgtoqml/Europe_generated.qml /home/moheim/qt/build-default-base/qtdeclarative/examples/quick/quickshapes/weatherforecast/.qt/svgtoqml/Europe_generated.qml
      cd /home/moheim/qt/build-default-base/qtdeclarative/examples/quick/quickshapes/weatherforecast && /home/moheim/qt/build-default-base/qtbase/bin/svgtoqml -p --copyright-statement Copyright\ ©\ 2024\ The\ Qt\ Company\ Ltd.\ Copyright\ ©\ 2010\ Kolja21\nSPDX-License-Identifier:\ CC-BY-3.0 -t DemoShape /home/moheim/qt/qt6/qtdeclarative/examples/quick/quickshapes/weatherforecast/assets/Europe.svg /home/moheim/qt/build-default-base/qtdeclarative/examples/quick/quickshapes/weatherforecast/.qt/svgtoqml/Europe_generated.qml
      qt.qpa.xcb: could not connect to display
      qt.qpa.plugin: From 6.5.0, xcb-cursor0 or libxcb-cursor0 is needed to load the Qt xcb platform plugin.
      qt.qpa.plugin: Could not load the Qt platform plugin "xcb" in "" even though it was found.
      This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.
      
      Available platform plugins are: linuxfb, xcb, vkkhrdisplay, eglfs, wayland-brcm, wayland-egl, wayland, minimalegl, offscreen, vnc, minimal.
      
      Aborted (core dumped)
      

      It is possible to continue using QT_QPA_PLATFORM=offscreen but this is rather fragile and inconvenient.

        For Gerrit Dashboard: QTBUG-140675
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            moheim Moss Heim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes